# mcp_markdown

./: .gitignore  README.md  config.yaml  llm-guide-template.md  markdown-knowledge-system-implementation-plan.md  mcp-server-implementation.md  pyproject.toml
knowledge-base/system/: llm-guide.md
src/mcp_markdown/: __init__.py  config.py  file_operations.py  server.py  service.py
test-knowledge-base/system/: llm-guide.md
test-knowledge-base/system/templates/: note.template.md
test-knowledge-base/test/: example.md
